Delete anchor tag from text in projects section

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <section class="proyectos-de-software bg-dark" id="projects">
             <div class="container">
                 <h2>Proyectos</h2>
-                <p>He participado en varios <a href="{% url 'projects:list' %}">proyectos</a> para empresas, además de
+                <p>He participado en varios proyectos para empresas, además de
                     proyectos personales de software, y proyectos por aprendizaje y compartir conocimiento.</p>
                 <!-- <div class="projects">
                 <div class="project secondary-bg-dark">
