Add PPP blog to navigation section

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <a class="p-2 text-muted" href="#">Home</a>
                 <a class="p-2 text-muted" href="#projects">Proyectos</a>
                 <a class="p-2 text-muted" href="#resources">Recursos</a>
-                <a class="p-2 text-muted" href="http://blog.mathiasminacapilli.com">Blog</a>
-                <!-- <a class="p-2 text-muted" href="{% url 'courses:list' %}">Cursos</a>-->
+                <a class="p-2 text-muted" target="_blank" href="http://blog.mathiasminacapilli.com">Todos en Uno</a>
+                <a class="p-2 text-muted" target="_blank" href="http://programacionparapersonas.com">Programación Para Personas</a>
             </nav>
         </div>
 
