Add projects personal blog and PPP section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/timeline.css" />
+    <link rel="stylesheet" href="css/projects.css" />
   </head>
 
   <body>
@@ -365,63 +366,51 @@
             proyectos personales de software, y proyectos por aprendizaje y
             compartir conocimiento.
           </p>
-          <ul class="projects-wrapper">
-            <li>Todos en uno</li>
-            <li>Programación Para Personas</li>
+          <ul class="projects-list">
+            <li class="projects-list__project">
+              <div class="card">
+                <img
+                  class="card-img-top"
+                  src="img/todos en uno blog.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Todos en uno</h5>
+                  <p class="card-text">
+                    Un blog, podcast, y todo lo que pueda ayudar a sacar la
+                    versión de nostros mismos. A crecer en
+                    <b
+                      >nuestras 4 áreas fundamentales de nuestra vida: Física,
+                      Mental, Social y Espiritual</b
+                    >.
+                  </p>
+                  <a
+                    target="_blank"
+                    href="http://blog.mathiasminacapilli.com"
+                    class="btn btn-primary"
+                    >Ir al blog</a
+                  >
+                </div>
+              </div>
+            </li>
+            <li class="projects-list__project">
+              <div class="card">
+                <img
+                  class="card-img-top"
+                  src="img/programacion para personas blog.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Programación Para Personas</h5>
+                  <p class="card-text">
+                    Material y una comunidad en la cual crecer entre todos, y
+                    para todas las personas, el mundo de la computación.
+                  </p>
+                  <a href="#" class="btn btn-primary">Ir a conocer</a>
+                </div>
+              </div>
+            </li>
           </ul>
-
-          <!-- <div class="projects">
-                <div class="project secondary-bg-dark">
-                    <h4><a href="#">Mathias Minacapilli</a></h4>
-                    <p>
-                        This page.
-                    </p>
-                    <a href="<?=PROJECTS_ROUTE?>"><i class="fas fa-plus"></i> Ampliar</a>
-                </div>
-                <div class="project secondary-bg-dark">
-                    <h4><a href="#">Orders Admin</a></h4>
-                    <p>
-                        Aplicación para controlar las
-                        órdenes (pedidos) de una empresa.
-                    </p>
-                    <a href="<?=PROJECTS_ROUTE?>"><i class="fas fa-plus"></i> Ampliar</a>
-                </div>
-                <div class="project secondary-bg-dark">
-                    <h4><a href="#">My personal environment</a></h4>
-                    <p>
-                        Página con el prósito de tener un ámbiente
-                        propio en el cual llevar control desde tus gastos
-                        hasta tus tareas diarias a realizar.
-                    </p>
-                    <a href="http://mathiasminacapilli.pythonanywhere.com/" target="_blank"><i class="far fa-file"
-                            id="github"></i> Ver página</a>
-                    <a href="<?=PROJECTS_ROUTE?>"><i class="fas fa-plus"></i> Ampliar</a>
-                </div>
-            </div>
-            <h2>Proyectos en los que he Participado</h2>
-            <div class="projects">
-                <div class="project secondary-bg-dark">
-                    <h4><a href="http://www.monfic.com.uy" target="_blank">Monfic</a></h4>
-                    <p>
-                        Sitio el cual contiene la información del evento/ciclo de cine
-                        monfic realizado en Uruguay en los cines de Movie.
-                    </p>
-                    <a href="http://www.monfic.com.uy" target="_blank"><i class="far fa-file" id="github"></i> Ver
-                        página</a>
-                    <a href="<?=PROJECTS_ROUTE?>"><i class="fas fa-plus"></i> Ampliar</a>
-                </div>
-                <div class="project secondary-bg-dark">
-                    <h4><a href="http://www.monfic.com.uy" target="_blank">Liga cooperativa pre senior de futbol</a>
-                    </h4>
-                    <p>
-                        Pagina que administra una liga uruguaya de futbol mostrando resultados, posiciones,
-                        contabilidad, entre otras funcionalidades.
-                    </p>
-                    <a href="http://www.ligacooperativapreseniordefutbol.com.uy" target="_blank">
-                        <i class="far fa-file"></i> Ver página</a>
-                    <a href="<?=PROJECTS_ROUTE?>"><i class="fas fa-plus"></i> Ampliar</a>
-                </div>
-            </div> -->
         </div>
         <!-- /container -->
       </section>
