update age and scolarship

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               <div class="content">
                 <h3>Agosto 2020 - Actualidad</h3>
                 <p>
-                  <b>Analista de Desarrollo</b> –
+                  <b>Analista de Software</b> –
                   <a
                     href="https://www.mercadolibre.com.uy"
                     target="_blank"
@@ -331,7 +331,7 @@
           </div>
           <div class="sobre-mi-contenido">
             <p>
-              Mi nombre es Mathias Minacapilli, tengo 21 años y soy de Uruguay.
+              Mi nombre es Mathias Minacapilli, tengo 22 años y soy de Uruguay.
               <br />
               Me considero una persona bastante activa, es decir, no puedo parar
               de leer, aprender, y buscar cosas que me interesan y sobre las
